--- a/todov2 (1)/css/style.css
+++ b/todov2 (1)/css/style.css
@@ -1,10 +1,16 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
 }
 
 #todo {
@@ -21,6 +27,10 @@ html {
   padding: 10px 0;
 }
 
+
+
+
+
 .tasks-parent  {
   border: solid 2px #777;
   margin: 5px;
@@ -28,26 +38,19 @@ html {
   border-color: black;
  
 }
-#todo #todo-form input{
-  padding: 3px;
-  border: solid 2px #888;
-  margin: 0 0 0 5px;
-  width: 200px;
+
+    
+.tasks-parent li  {
+  width: 90%;
+  background: #adadad;
+  padding: 10px 20px;
+  margin: 1px 0;
+  overflow: hidden;
+ 
 }
 
-#todo #todo-form input[type=submit]{
-  text-transform: uppercase;
-  background: #22B473;
-  border: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  font-weight: bold;
-  color: #FFF;
-  padding: 3px 10px;
-  cursor: pointer;
-  width: auto;
-}
+
+
 .tasks{
   width: 100%;
   list-style: none; 
@@ -118,7 +121,50 @@ li .destroy:after {
   
 }
 
-@keyframes stroked {
-  from { text-decoration-color: transparent; }
-  to { text-decoration-color: auto; }
+
+.priorities {
+  position: relative;
+  width: 20%;
+  float: right;
+  text-align: center;
+}
+
+.priorities button {
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  border: 3px #333 solid;
+  
+}
+
+.priorities .priorities-list {
+  position: absolute;
+  top: 100%;
+  display: none; 
+}
+
+.priorities .priority {
+  display: inline-block;
+}
+
+.low {
+  background: #00ff00 !important;
+}
+
+.medium {
+  background: #f93 !important;
+}
+
+.high {
+  background: #f30 !important;
+}
+
+
+#add-task{
+  
+  width: 25%;
+  
+  color:green; 
 }
