--- a/todov2 (1)/css/style.css
+++ b/todov2 (1)/css/style.css
@@ -1,4 +1,4 @@
-*{
+*{ 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -33,9 +33,11 @@ ol, ul {
 
 .tasks-parent  {
   border: solid 2px #777;
-  margin: 5px;
+  margin-left: 2px;
+  margin-top: 10px;
   padding: 5px;
   border-color: black;
+  
  
 }
 
@@ -125,10 +127,11 @@ li .destroy:after {
 .priorities {
   position: relative;
   width: 20%;
-  float: right;
-  text-align: center;
+  margin-top: 10px;
+   
+  
 }
-
+  
 .priorities button {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -136,6 +139,7 @@ li .destroy:after {
   width: 20px;
   height: 20px;
   border: 3px #333 solid;
+  
   
 }
 
@@ -165,6 +169,10 @@ li .destroy:after {
 #add-task{
   
   width: 25%;
+  color:green;
+}
+
+.underline{
   
-  color:green; 
+  text-decoration: underline; 
 }
