--- a/todov2 (1)/css/style.css
+++ b/todov2 (1)/css/style.css
@@ -102,7 +102,7 @@ li .destroy:after {
 #clearCompleted {
   
   margin-bottom: 5px;
-  color: yellow;
+  color: blue;
   border: solid; 
   width: 50%; 
   
